# gyemfQ1bTsvNtYOn

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.airflow  Dockerfile.api  Dockerfile.mlflow  Dockerfile.monitoring  README.md  README_DOCKER_PORTALS.md  README_PATCHED.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.ipynb_checkpoints/: Bitcoin_hybrid_LLM_quant_strategy_modified-checkpoint.ipynb  Bitcoin_trading_agent_2_hybrid_llm_quant-checkpoint.ipynb  Bitcoin_trading_basic-checkpoint.ipynb  Bitcoin_trading_llm_enhanced-checkpoint.ipynb
airflow/: airflow.cfg  airflow.db
api/: main.py
config/: config_cache.json  default_config.json  google_sheet_config_template.csv
dags/: bitcoin_trading_pipeline_dag.py  trading_pipeline_dag.py  weekly_gmail_summary_dag.py
data/processed/: features.csv
data/raw/: btc_candles.csv
env_btc/: pyvenv.cfg
env_btc/Scripts/: activate  activate.bat
monitoring/: app.py
notebooks/: Bitcoin_hybrid_LLM_quant_strategy_with_guardrails.ipynb  Bitcoin_trading_regime_switch.ipynb
reports/latest_run/: accounting_mismatches.csv  buys.csv  equity_curve.csv  guardrails.csv  llm_decisions.csv  sells.csv  summary.json
requirements/: airflow.txt  api.txt  base.txt  dev.txt
scripts/: refresh_config.py  run_local.sh  run_pipeline.py  send_weekly_summary.py
src/bitcoin_trading_agent.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/trading_pipeline/: __init__.py  (+4 more)
tests/: test_config.py  test_features.py  test_notifications.py  test_strategy_core.py
