[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitcoin-trading-agent"
version = "0.1.0"
description = "Hybrid LLM plus quantitative Bitcoin trading pipeline"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.27,<1.0",
  "flask>=3.0,<4.0",
  "pandas>=2.0,<3.0",
  "numpy>=1.24,<3.0",
  "requests>=2.31,<3.0",
  "google-api-python-client>=2.120,<3.0",
  "google-auth>=2.29,<3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
